--- a/bazadel/templates/includes/form_order.html
+++ b/bazadel/templates/includes/form_order.html
@@ -1,112 +1,108 @@
 {% load static %}
 <!-- Contact Start -->
 <div class="container-fluid py-5 mb-5">
-	<div class="container">
-		<div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-			<h5 class="text-primary">Если у вас есть вопросы об обучении или вы не знаете с чего начать свой цифровой бизнес, оставьте свой номер — мы позвоним, чтобы ответить на все ваши вопросы.</h5>
-			<h1 class="mb-3">Обращайтесь, мы Вам поможем!</h1>
-		</div>
-		<div class="contact-detail position-relative p-5">
-			<div class="row g-5 mb-5 justify-content-center">
-				<div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".3s">
-					<div class="d-flex bg-light p-3 rounded">
-						<div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
-							<i class="fas fa-map-marker-alt text-white"></i>
-						</div>
-						<div class="ms-3">
-							<h4 class="text-primary">Адрес</h4>
-							<a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">Севастополь,ул.Университетская, 31</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".5s">
-					<div class="d-flex bg-light p-3 rounded">
-						<div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
-							<i class="fa fa-phone text-white"></i>
-						</div>
-						<div class="ms-3">
-							<h4 class="text-primary">Позвоните нам</h4>
-							<a class="h5" href="tel:+0123456789" target="_blank">+7 978 572 93 71</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".7s">
-					<div class="d-flex bg-light p-3 rounded">
-						<div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
-							<i class="fa fa-envelope text-white"></i>
-						</div>
-						<div class="ms-3">
-							<h4 class="text-primary">Напишите нам</h4>
-							<a class="h5" href="mailto:master-cim@yandex.ru" target="_blank">basedeal@ya.ru</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row g-5">
-				<div class="col-lg-6 wow fadeIn" data-wow-delay=".3s">
-					<div class="p-5 h-100 rounded contact-map">
-						<iframe
-							class="rounded w-100 h-100"
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2841.1493927109746!2d33.47480607648954!3d44.59396979107924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40953ca95cb4b92b%3A0xfec3bfa068ef0230!2z0KPQvdC40LLQtdGA0YHQuNGC0LXRgtGB0LrQsNGPINGD0LvQuNGG0LAsIDMxLCDQodC10LLQsNGB0YLQvtC_0L7Qu9GM!5e0!3m2!1sru!2s!4v1695987796330!5m2!1sru!2s"
-							style="border:0;"
-							allowfullscreen=""
-							loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"
-						></iframe>
-					</div>
-				</div>
-				<div class="col-lg-6 wow fadeIn" data-wow-delay=".5s">
-					<div class="p-5 rounded contact-form">
-						<div class="form-floating mb-3">
-							{# Этот блок будет показан, если в форме есть ошибки #}
-                             {% if form.errors %}
-                              {% for field in form %}
-                               {% for error in field.errors %}
-                                <div class="alert alert-danger">
-                                    {{ error|escape }}
-                                </div>
-							   {% endfor %}
-                              {% endfor %}
-                              {% for error in form.non_field_errors %}
-                                <div class="alert alert-danger">
-                                    {{ error|escape }}
-                                </div>
-							   {% endfor %}
-                             {% endif %}
+    <div class="container">
+      <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
+        <h5 class="text-primary">Если у вас есть вопросы об обучении или вы не знаете с чего начать свой цифровой бизнес, оставьте свой номер — мы позвоним, чтобы ответить на все ваши вопросы.</h5>
+        <h1 class="mb-3">Обращайтесь, мы Вам поможем!</h1>
+      </div>
+      <div class="contact-detail position-relative p-5">
+        <div class="row g-5 mb-5 justify-content-center">
+          <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".3s">
+            <div class="d-flex bg-light p-3 rounded">
+              <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
+                <i class="fas fa-map-marker-alt text-white"></i>
+              </div>
+              <div class="ms-3">
+                <h4 class="text-primary">Адрес</h4>
+                <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">Севастополь,ул.Университетская, 31</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".5s">
+            <div class="d-flex bg-light p-3 rounded">
+              <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
+                <i class="fa fa-phone text-white"></i>
+              </div>
+              <div class="ms-3">
+                <h4 class="text-primary">Позвоните нам</h4>
+                <a class="h5" href="tel:+0123456789" target="_blank">+7 978 572 93 71</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-lg-6 wow fadeIn" data-wow-delay=".7s">
+            <div class="d-flex bg-light p-3 rounded">
+              <div class="flex-shrink-0 btn-square bg-secondary rounded-circle" style="width: 64px; height: 64px;">
+                <i class="fa fa-envelope text-white"></i>
+              </div>
+              <div class="ms-3">
+                <h4 class="text-primary">Напишите нам</h4>
+                <a class="h5" href="mailto:master-cim@yandex.ru" target="_blank">basedeal@ya.ru</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row g-5">
+          <div class="col-lg-6 wow fadeIn" data-wow-delay=".3s">
+            <div class="p-5 h-100 rounded contact-map">
+              <iframe
+                class="rounded w-100 h-100"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2841.1493927109746!2d33.47480607648954!3d44.59396979107924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40953ca95cb4b92b%3A0xfec3bfa068ef0230!2z0KPQvdC40LLQtdGA0YHQuNGC0LXRgtGB0LrQsNGPINGD0LvQuNGG0LAsIDMxLCDQodC10LLQsNGB0YLQvtC_0L7Qu9GM!5e0!3m2!1sru!2s!4v1695987796330!5m2!1sru!2s"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+            </div>
+          </div>
+          <div class="col-lg-6 wow fadeIn" data-wow-delay=".5s">
+            <div class="p-5 rounded contact-form">
 
-							<form method="post">
-								{% csrf_token %}
-                                 {% for field in form %}
-								<div class="form-group row my-3 p-3">
-									<label for="{{ field.id_for_label }}">
-										{{ field.label }}
-                                        {% if field.field.required %}
-										  <span class="required text-danger">*</span>
-										{% endif %}
-									</label>
-									{{ field }} 
-                                    {% if field.help_text %}
-									<small id="{{ field.id_for_label }}-help" class="form-text text-muted">
-										{{ field.help_text|safe }}
-									</small>
-									{% endif %}
-								</div>
-								{% endfor %}
-								<div class="text-start">
-									<button class="btn bg-primary text-white py-3 px-5" type="button">Отправить сообщение</button>
-								</div>
-								<div class="border-top mt-4 pt-3">
-									<p class="mb-0">
-										Нажимая на кнопку, Вы принимаете <a href="{% static 'doc/police.pdf' %}" class="text-white">пользовательское соглашение</a> и соглашаетесь на обработку ваших персональных данных на условиях политики
-										конфиденциальности.
-									</p>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<!-- Contact End -->
+                      {# Этот блок будет показан, если в форме есть ошибки #}
+                      {% if form.errors %}
+                      {% for field in form %}
+                      {% for error in field.errors %}
+                      <div class="alert alert-danger">
+                        {{ error|escape }}
+                      </div>
+                      {% endfor %}
+                      {% endfor %}
+                      {% for error in form.non_field_errors %}
+                      <div class="alert alert-danger">
+                        {{ error|escape }}
+                      </div>
+                      {% endfor %}
+                      {% endif %}
+                      <form method="post" class="form-floating">
+                        {% csrf_token %}
+                        {% for field in form %}
+                        {% comment %} {% if field.field.required %}
+                        <span class="required text-danger">*</span>
+                        {% endif %} {% endcomment %}
+                        <div class="mb-4">
+                            {{ field }}
+                        </div>
+                        {% if field.help_text %}
+                        <small id="{{ field.id_for_label }}-help" class="form-text text-muted">
+                        {{ field.help_text|safe }}
+                        </small>
+                        {% endif %}
+                        {% endfor %}
+                        <div class="text-start">
+                          <button class="btn bg-primary text-white py-3 px-5" type="button">Отправить сообщение</button>
+                        </div>
+                        <div class="border-top mt-4 pt-3">
+                          <p class="mb-0">
+                            Нажимая на кнопку, Вы принимаете <a href="{% static 'doc/police.pdf' %}" class="text-white">пользовательское соглашение</a> и соглашаетесь на обработку ваших персональных данных на условиях политики
+                            конфиденциальности.
+                          </p>
+                        </div>
+                      </form>
+
+            </div><!--p-5 rounded contact-form-->
+          </div><!--col-lg-6 wow fadeIn-->
+        </div><!--row g-5-->
+      </div><!--contact-detail-->
+    </div><!--container-->
+  </div><!--container-fluid-->
+  <!-- Contact End -->
