--- a/bazadel/templates/includes/footer.html
+++ b/bazadel/templates/includes/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <footer class="border-top text-center py-3">
         <!-- Footer Start -->
         <div class="container-fluid footer bg-dark wow fadeIn" data-wow-delay=".3s">
@@ -18,27 +19,39 @@
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Быстрый доступ</a>
                         <div class="mt-4 d-flex flex-column short-link">
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Контакты</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Услуги</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Проекты</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Новости</a>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown">Услуги</a>
+                                <div class="dropdown-menu rounded">
+                                    <a href="{% url 'posts:analys' %}" class="dropdown-item">Аналитика данных</a>
+                                    <a href="{% url 'posts:database' %}" class="dropdown-item">Большие данные</a>
+                                    <a href="{% url 'posts:website' %}" class="dropdown-item">Разработка веб-сайта</a>
+                                    <a href="{% url 'posts:telega' %}" class="dropdown-item">Приложения Telegram</a>
+                                    <a href="{% url 'posts:promotion' %}" class="dropdown-item">Продвижение сайта</a>
+                                </div>
+                            </div>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle text-white" data-bs-toggle="dropdown">Обучение</a>
+                                <div class="dropdown-menu rounded">
+                                    <a href="{% url 'posts:edudb' %}" class="dropdown-item">Базы данных</a>
+                                    <a href="{% url 'posts:edutel' %}" class="dropdown-item">Приложения Telegram</a>
+                                    <a href="{% url 'posts:eduweb' %}" class="dropdown-item">Web сайт</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <a href="#" class="h3 text-secondary">Помощь</a>
                         <div class="mt-4 d-flex flex-column help-link">
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Конфиденциальность</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Техподдержка</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>FQAs</a>
-                            <a href="" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Админ</a>
+                            <a href="{% static 'doc/police.pdf' %}" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Конфиденциальность</a>
+                            <a href="#nav_order" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Техподдержка</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#" class="h3 text-secondary">Свяжитесь с нами</a>
+                        <a href="#nav_order" class="h3 text-secondary">Свяжитесь с нами</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
-                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Россия, Севастополь, ул. Университетская, 31</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +7 978 572 93 71</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i>basedeal@yandex.ru</a>
+                            <a href="#nav_order" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Россия, Севастополь, ул. Университетская, 31</a>
+                            <a href="#nav_order" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +7 978 572 93 71</a>
+                            <a href="#nav_order" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i>basedeal@yandex.ru</a>
                         </div>
                     </div>
                 </div>
