--- a/bazadel/templates/includes/header copy.html
+++ b/bazadel/templates/includes/header copy.html
@@ -40,7 +40,16 @@
                             <a href="{% url 'posts:about' %}" class="nav-item nav-link">О компании</a>
                             <a href="{% url 'posts:service' %}" class="nav-item nav-link">Услуги</a>
                             <a href="{% url 'posts:learning' %}" class="nav-item nav-link">Обучение</a>
-                            <a href="#nav_order" class="nav-item nav-link">Контакты</a>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Страницы</a>
+                                <div class="dropdown-menu rounded">
+                                    <a href="blog.html" class="dropdown-item">Блог</a>
+                                    <a href="team.html" class="dropdown-item">Команда</a>
+                                    <a href="testimonial.html" class="dropdown-item">Отзывы</a>
+                                    <a href="404.html" class="dropdown-item">404 Page</a>
+                                </div>
+                            </div>
+                            <a href="contact.html" class="nav-item nav-link">Контакты</a>
                         </div>
                     </div>
                     <div class="d-none d-xl-flex flex-shirink-0">
